--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 fastapi==0.109.2
-langchain[all]==0.1.5
+langchain==0.1.5
+langchain-cli==0.0.20
 langserve==0.0.41
 python-dotenv==1.0.1
 uvicorn==0.27.0.post1
